# GroundingDINO

./: .gitignore  dino_install.md  pyproject.toml  requirements.txt  setup.py
groundingdino/models/GroundingDINO/backbone/: swin_transformer.py
groundingdino/util/: inference.py
scripts/: README_OPTIMIZATION.md  optimized_inference.py  test.py  test.sh
